Added google analytics tags

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
     content="Nikhil Shinde is a software engineer who specializes in backend development and occasionally designing frontend as well.">
   <link rel="icon" href="<%= BASE_URL %>favicon.png">
   <title>Nikhil Shinde</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZNY26N01P"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-PZNY26N01P');
+  </script>
 </head>
 
 <body>
